tests/NormalTests/paczka1/small_fuzzy/32968375.err
Error in line 1: nDS A919 54,6
Error in line 4: A919 S22 6,1
Error in line 15: A919 S22 35,2
